<resources>
    <string name="app_name">Fragments Training</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="fragment_a_text">Fragment A</string>
    <string name="fragment_a_button">TO FRAGMENT B</string>
    <string name="fragment_b_text">Fragment B</string>
    <string name="fragment_b_button_to_c">TO FRAGMENT C</string>
    <string name="button_back_to_a">BACK TO A</string>
    <string name="fragment_c_text">Fragment C</string>
    <string name="fragment_d_text">Fragment D</string>
    <string name="task_1">TASK 1</string>
    <string name="task_2">TASK 2</string>
    <string name="fragment_c_button_to_d">TO FRAGMENT D</string>
    <string name="first_name">Name</string>
    <string name="last_name">Last Name</string>
    <string name="phone">Phone</string>
    <string name="save">Сохранить</string>
    <string name="phone_number">Номер телефона</string>
    <string name="photo_url">Photo URL</string>
    <string name="button_back_to_b">BACK TO B</string>
</resources>