<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".task1.FragmentB">

    <TextView
        android:id="@+id/fragment_b_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin_20dp"
        android:text="@string/fragment_b_text"
        android:textAppearance="@style/TextAppearance.AppCompat.Display1"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        />

    <Button
        android:id="@+id/fragment_b_button_to_c"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin_20dp"
        android:text="@string/fragment_b_button_to_c"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="@+id/fragment_b_button_back_to_a"
        app:layout_constraintStart_toEndOf="@+id/fragment_b_button_back_to_a"
        app:layout_constraintTop_toTopOf="@+id/fragment_b_button_back_to_a"
        />

    <Button
        android:id="@+id/fragment_b_button_back_to_a"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin_20dp"
        android:text="@string/button_back_to_a"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/fragment_b_text"
        app:layout_constraintEnd_toStartOf="@+id/fragment_b_button_to_c"
        />

</androidx.constraintlayout.widget.ConstraintLayout>