<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:padding="5dp"
    android:layout_margin="5dp"
    app:cardElevation="2dp"
    app:cardCornerRadius="4dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/rv_image"
            android:layout_width="@dimen/item_photo_size"
            android:layout_height="@dimen/item_photo_size"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            />

        <TextView
            android:id="@+id/rv_first_name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_20dp"
            android:gravity="start"
            android:text="@string/first_name"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            app:layout_constraintBottom_toTopOf="@+id/rv_last_name"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/rv_image"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/rv_last_name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_20dp"
            android:gravity="start"
            android:text="@string/last_name"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            app:layout_constraintBottom_toTopOf="@+id/rv_phone_number"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/rv_image"
            app:layout_constraintTop_toBottomOf="@id/rv_first_name" />

        <TextView
            android:id="@+id/rv_phone_number"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/phone"
            android:gravity="start"
            android:layout_marginStart="@dimen/margin_20dp"
            app:layout_constraintStart_toEndOf="@+id/rv_image"
            app:layout_constraintTop_toBottomOf="@id/rv_last_name"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            />


    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.cardview.widget.CardView>